[package]
name = "ollm_sdk"
version = "0.1.2"
edition = "2021"
authors = ["Connor yuzvamaksym@gmail.com"]
description = "A type-safe Rust SDK for the OLLM API with compile-time error checking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/max-de-bug/OLLM-sdk"
keywords = ["ollm", "api", "sdk", "llm", "chat"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
